--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,6 +1,17 @@
 Apache Ignite Release Notes
 ===========================
 
+Apache Ignite In-Memory Database and Caching Platform 2.7.6
+-----------------------------------------------------------
+
+Ignite:
+* Ignite work directory is set to current user's home directory by default, native persistence files aren't stored in Temp anymore
+* Fixed the bug when SELECT with an equality predicate on the part of a primary compound key returned a single row result while multiple matching rows existed in the table
+* Fixed data corruption in the rare case when page replacement can reload an outdated page during checkpoint
+* Fixed tree corruption caused by incorrect row size calculation for shared cache groups
+* Java heap footprint reduced by optimizing GridDhtPartitionsFullMessage maps in exchange history
+* .NET: Fix for native persistence, now it works with custom affinity function
+
 Apache Ignite In-Memory Database and Caching Platform 2.7.5
 -----------------------------------------------------------
 
