--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -11,6 +11,7 @@ Ignite:
 * Fixed tree corruption caused by incorrect row size calculation for shared cache groups
 * Java heap footprint reduced by optimizing GridDhtPartitionsFullMessage maps in exchange history
 * .NET: Fix for native persistence, now it works with custom affinity function
+* Fixed case when an outdated node with already destroyed cache causes cluster hang
 
 Apache Ignite In-Memory Database and Caching Platform 2.7.5
 -----------------------------------------------------------
