--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -12,6 +12,7 @@ Ignite:
 * Java heap footprint reduced by optimizing GridDhtPartitionsFullMessage maps in exchange history
 * .NET: Fix for native persistence, now it works with custom affinity function
 * Fixed case when an outdated node with already destroyed cache causes cluster hang
+* Fixed the bug with the inability to change the inline_size of an existing index after a drop and further recreation with a different one
 
 Apache Ignite In-Memory Database and Caching Platform 2.7.5
 -----------------------------------------------------------
