--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -5,14 +5,14 @@ Apache Ignite In-Memory Database and Caching Platform 2.7.6
 -----------------------------------------------------------
 
 Ignite:
-* Ignite work directory is set to current user's home directory by default, native persistence files aren't stored in Temp anymore
-* Fixed the bug when SELECT with an equality predicate on the part of a primary compound key returned a single row result while multiple matching rows existed in the table
-* Fixed data corruption in the rare case when page replacement can reload an outdated page during checkpoint
-* Fixed tree corruption caused by incorrect row size calculation for shared cache groups
-* Java heap footprint reduced by optimizing GridDhtPartitionsFullMessage maps in exchange history
-* .NET: Fix for native persistence, now it works with custom affinity function
-* Fixed case when an outdated node with already destroyed cache causes cluster hang
-* Fixed the bug with the inability to change the inline_size of an existing index after a drop and further recreation with a different one
+* Ignite work directory is now set to the current user's home directory by default, native persistence files will not be stored in the Temp directory anymore
+* Fixed a bug that caused a SELECT query with an equality predicate on a part of the primary compound key to return a single row even if the query matched multiple rows
+* Fixed an issue that could cause data corruption during checkpointing
+* Fixed an issue where a row size was calculated incorrectly for shared cache groups, which caused a tree corruption
+* Reduced java heap footprint by optimizing GridDhtPartitionsFullMessage maps in exchange history
+* .NET: Native persistence now works with a custom affinity function
+* Fixed an issue where an outdated node with a destroyed cache caused the cluster to hang
+* Fixed a bug that made it impossible to change the inline_size property of an existing index after it was dropped and recreated with a different value
 
 Apache Ignite In-Memory Database and Caching Platform 2.7.5
 -----------------------------------------------------------
