--- a/packaging/deb/changelog
+++ b/packaging/deb/changelog
@@ -1,3 +1,9 @@
+apache-ignite (2.7.6) unstable; urgency=low
+
+  * Updated Apache Ignite to version 2.7.6
+
+ -- Petr Ivanov <mr.weider@gmail.com>  Fri, 20 Aug 2019 21:01:13 +0300
+
 apache-ignite (2.7.5-1) unstable; urgency=low
 
   * Updated Apache Ignite to version 2.7.5
