IGNITE-12082 Update versions for pre-build DEB/RPM packages, fixed date and version with -1 suffix for RPM and for DEB

--- a/packaging/deb/changelog
+++ b/packaging/deb/changelog
@@ -1,4 +1,4 @@
-apache-ignite (2.7.6) unstable; urgency=low
+apache-ignite (2.7.6-1) unstable; urgency=low
 
   * Updated Apache Ignite to version 2.7.6
 
