--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -13,6 +13,9 @@ Ignite:
 * .NET: Native persistence now works with a custom affinity function
 * Fixed an issue where an outdated node with a destroyed cache caused the cluster to hang
 * Fixed a bug that made it impossible to change the inline_size property of an existing index after it was dropped and recreated with a different value
+* Fixed an issue causing silent control.sh script fail when JAVA_HOME is not set
+* Fixed an issue casuing sporadic node failure when persistence is enabled and WAL mmap is disabled
+* Fixed an issue causing potential PDS corruption when a node is killed during checkpoint mark phase
 
 Apache Ignite In-Memory Database and Caching Platform 2.7.5
 -----------------------------------------------------------
