GG-23713 Check cluster active state, small fixes. (#499)

--- a/modules/web-console/frontend/i18n/messages.en.json
+++ b/modules/web-console/frontend/i18n/messages.en.json
@@ -108,10 +108,12 @@
             "newScanNamePrefix": "Scan",
             "clearQueryResultConfirmationMessage": "Are you sure you want to clear query result?",
             "queryTooltip": {
+                "clusterIsInactive": "Cluster is inactive",
                 "waitingForResponse": "Waiting for server response",
                 "actionPrefix": "Input text to "
             },
             "scanTooltip": {
+                "clusterIsInactive": "Cluster is inactive",
                 "waitingForResponse": "Waiting for server response",
                 "text": "Select cache to export scan results"
             },
